Add tenantId to LoginRequestDto and configure CORS origins in SecurityConfig